framec_tests/language_specific/java/v3_outline/negative/test_action_with_frame.frm
@target java

system S {
    actions:
        doIt() {
            -> $Y
        }
}
